V1.0.2.0
- fix filter on attributes for the <> operator

V1.0.1.0
- fix online maps

V1.0.0.0
- fix GGZ file
- fix Offline map, clicking on the geocache now also makes the geocache active in GSAK

V0.9.1.0
- fix copy to database for copying cacheimages

V0.9.0.0
- added 'Pass through' filter (in Extra)
- fix copy to database, now also copies CacheImages records
- changed zooming editor with mouse wheel, prevent zooming in certain situations
- added filter for multiple cache type selection
- added filter for multiple cache container selection
- added order by FoundByMeDate in the Geocache counter filter

V0.8.3.0
- fix sequence editor

V0.8.2.0
- fix offline map loading patterns and symbols

V0.8.1.0
- added Cef browser
- changed shapefile tester from IE to Cef
- updated macro (that is now on GSAK forum)
- added show on online map action
- added show on offline map action
- execute flow button made larger
- added macro for display active geocache on offline map

V0.7.0.0
- added script editor
- added script filter
- added script action

V0.6.0.0
- added shapefile support (management and test)
- added shapefile area filter
- added assign area name to field action

V0.5.0.0
- added collection filter
- added collection action (add and delete)
- added collection editor and macro
- added GSAK locations to location filters
- added Excel export action

V0.4.0.0
- added Formula Solver function and macro

V0.3.0.0
- added set macro flag action
- added clear macro flag execute once action
- updates default GSAKWrapper macro
- fix for Cutom fields (now also addes global fields to the list)

V0.2.0.0
- macro's saved as ANSI instead of UTF8
- added geocache counter filter (to limit selected geocaches)
- added History file (this file)
- changed macro destination folder for flow and sequence macro (not program folder anymore)
- added export to GPX action
- added custom date field filter
- added export to GGZ action

V0.1.0.0
- initial release